# ROS-Warehouse-Demo

./: .gitignore  Readme.md  ros2_ws.repos
camera_detect_msgs/: CMakeLists.txt  package.xml
camera_detect_msgs/srv/: GetAprilTagTransform.srv
camera_detection/: README.md  package.xml  setup.py
camera_detection/camera_detection/: camera_tf.py  detection_manager.py  grid_overlay.py
camera_detection/config/: camera_info.yaml
camera_detection/launch/: calibrate.py  detection_manager.py  manipulation_camera_gz.py  manipulation_camera_real.py  test_calibration.py
iras_jackal_description/: package.xml  setup.cfg  setup.py
iras_jackal_description/launch/: robot.srdf  robot.srdf.xacro  robot.urdf.xacro  robot.yaml
iras_jackal_description/launch/platform/config/: control.yaml  diagnostic_aggregator.yaml  diagnostic_updater.yaml  imu_filter.yaml  teleop_joy.yaml
iras_jackal_description/launch/platform/launch/: platform-service.launch.py
iras_jackal_description/launch/sensors/config/: camera_0.yaml  imu_1.yaml  ins_0.yaml  lidar2d_0.yaml  lidar2d_1.yaml  lidar3d_0.yaml
iras_jackal_description/launch/sensors/launch/: camera_0.launch.py  imu_1.launch.py  ins_0.launch.py  lidar2d_0.launch.py  lidar2d_1.launch.py  lidar3d_0.launch.py  sensors-service.launch.py
jackal/jackal_control/: CMakeLists.txt  package.xml
jackal/jackal_description/: CMakeLists.txt  package.xml
jackal/jackal_msgs/: CMakeLists.txt  package.xml
jackal/jackal_msgs/msg/: Feedback.msg  Status.msg
jackal/jackal_navigation/: CMakeLists.txt  package.xml
jackal/jackal_tutorials/: CMakeLists.txt  package.xml
jackal_description/: package.xml  setup.cfg  setup.py
jackal_description/launch/: robot.urdf.xacro  robot.yaml
jackal_description/launch/manipulators/config/: moveit.yaml
jackal_description/launch/platform/config/: control.yaml  diagnostic_updater.yaml  global_localization.yaml  localization.yaml  navsat_transform.yaml
jackal_description/launch/platform/launch/: platform-service.launch.py
jackal_description/launch/sensors/config/: axis_camera_0.yaml  axis_camera_0_params.yaml  lidar_2d_0.yaml
jackal_description/launch/sensors/launch/: axis_camera_0.launch.py  gps_1.launch.py  lidar_2d_0.launch.py  sensors-service.launch.py
jackal_gazebo/: package.xml  setup.cfg  setup.py
jackal_gazebo/launch/: empty_world.launch.py  jackal_spawn.launch.py  jackal_world.launch.py
kinova_gen3_lite_moveit_config/: README.md
kinova_pick_place/: package.xml  setup.cfg  setup.py
kinova_pick_place/kinova_pick_place/: arm_control.py  block_pick_place.py
kortex_description/: readme_control.md
kortex_description/arms/gen3/6dof/config/: ros2_controllers.yaml
kortex_description/arms/gen3/7dof/config/: ros2_controllers.yaml
kortex_description/arms/gen3_lite/6dof/config/: ros2_controllers.yaml
kortex_description/arms/gen3_lite/6dof/urdf/: gen3_lite_macro.xacro
kortex_description/grippers/gen3_lite_2f/urdf/: gen3_lite_2f.ros2_control.xacro  gen3_lite_2f_macro.xacro
kortex_description/grippers/robotiq_2f_140/urdf/: robotiq_2f_140_macro.xacro
kortex_description/grippers/robotiq_2f_85/urdf/: robotiq_2f_85_macro.xacro
kortex_description/robots/: kinova.urdf.xacro
kortex_description/rviz/: view_robot.rviz
manipulation_camera/: package.xml  setup.cfg  setup.py
manipulation_camera/config/: camera_info.yaml
manipulation_camera/launch/: calibrate.py  camera.py
scripts/: timed_twist_sequence.py
warehouse_setup/: package.xml  setup.cfg  setup.py
warehouse_setup/launch/: generate_jackal.launch.py  kortex_sim_control.launch.py  launch_warehouse.py  sim_control.py  spawn_jackal.launch.py  spawn_kinova.launch.py
warehouse_sim/: package.xml  setup.py
warehouse_sim/launch/: launch_warehouse.py  launch_warehouse_with_apriltags.py  spawn_jackal.launch.py  spawn_kinova.launch.py
warehouse_sim/warehouse_sim/: tf_relay.py
warehouse_world/: CMakeLists.txt  package.xml
warehouse_world/models/Apriltag36_11_00000/: model.sdf
warehouse_world/models/Apriltag36_11_00001/: model.config  model.sdf
warehouse_world/models/Apriltag36_11_00001_large/: model.sdf
warehouse_world/models/Apriltag36_11_00002/: model.config  model.sdf
warehouse_world/models/big_block_blue/: model.sdf
warehouse_world/models/big_block_green/: model.config  model.sdf
warehouse_world/models/big_block_green_april/: model.config  model.sdf
warehouse_world/models/big_block_purple/: model.sdf
warehouse_world/models/big_block_red/: model.config  model.sdf
warehouse_world/models/big_block_yellow/: model.sdf
warehouse_world/models/block_blue/: model.config  model.sdf
warehouse_world/models/block_blue_april/: model.config  model.sdf
warehouse_world/models/block_green/: model.sdf
warehouse_world/models/block_purple/: model.config  model.sdf
warehouse_world/models/block_red/: model.config  model.sdf
warehouse_world/models/block_yellow/: model.config  model.sdf
warehouse_world/models/block_yellow_april/: model.config  model.sdf
warehouse_world/models/grey_wall/: model.sdf
warehouse_world/models/table/: model.sdf
warehouse_world/worlds/: warehouse.sdf  warehouse2.sdf  warehouse_old.sdf  warehouse_with_apriltag_test.sdf
