<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_setup</name>
  <version>0.0.0</version>
  <description>Warehouse launch package for Jackal and Kinova Arm</description>
  <maintainer email="soloww@oregonstate.edu">Will Solow</maintainer>
  <license>BSD-3-Clause</license>



  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robotiq-description</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
