<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_world</name>
  <version>0.0.0</version>
  <description>Warehouse world description and SDF files</description>
  <maintainer email="soloww@oregonstate.edu">Will Solow</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/../"/>
    <gazebo_ros gazebo_media_path="${prefix}/../"/>
    <gazebo_ros plugin_path="${prefix}/../"/>
  </export>
</package>
