<?xml version="1.0"?>
<package format="3">
  <name>jackal_description</name>
  <version>0.8.10</version>
  <description>URDF robot description for Jackal</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  
  <exec_depend>cpr_onav_description</exec_depend>
  <exec_depend>flir_camera_description</exec_depend>
  <exec_depend>lms1xx</exec_depend>
  <exec_depend>pointgrey_camera_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sick_tim</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
