<?xml version="1.0"?>
<package format="3">
  <name>jackal_msgs</name>
  <version>0.8.10</version>
  <description>Messages exclusive to Jackal, especially for representing low-level motor commands and sensors.</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/jackal_msgs</url>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  </export>
</package>
