<?xml version="1.0"?>
<package format="3">
  <name>jackal_navigation</name>
  <version>0.8.10</version>
  <description>Launch files and code for autonomous navigation of the Jackal</description>
  <author email="spourmehr@clearpathrobotics.com">Shokoofeh Pourmehr</author>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>


  <export>

  </export>
</package>
